@@ -141,7 +141,7 @@ def init_gui() -> QApplication:
     root.setFont(font)
     # Disable global pixmap cache
     QPixmapCache.setCacheLimit(0)
-    logger.info("Platform: %s", root.platformName())
+    logger.info("Platform plugin: %s", root.platformName())
     return root
 
 
